samples/v2-single-round/ruff-24616/gates/test-log.txt
   Compiling ty_ide v0.0.0 (/private/tmp/refactor-eq-workdir/bb-merged-24616/crates/ty_ide)
   Compiling mdtest v0.0.0 (/private/tmp/refactor-eq-workdir/bb-merged-24616/crates/mdtest)
   Compiling ruff_wasm v0.15.10 (/private/tmp/refactor-eq-workdir/bb-merged-24616/crates/ruff_wasm)
   Compiling ruff v0.15.10 (/private/tmp/refactor-eq-workdir/bb-merged-24616/crates/ruff)
   Compiling ruff_server v0.2.2 (/private/tmp/refactor-eq-workdir/bb-merged-24616/crates/ruff_server)
   Compiling ty_test v0.0.0 (/private/tmp/refactor-eq-workdir/bb-merged-24616/crates/ty_test)
   Compiling ruff_markdown v0.0.0 (/private/tmp/refactor-eq-workdir/bb-merged-24616/crates/ruff_markdown)
   Compiling ruff_workspace v0.0.0 (/private/tmp/refactor-eq-workdir/bb-merged-24616/crates/ruff_workspace)
error[E0599]: no associated item named `MDTEST_TEST_FILTER` found for struct `EnvVars` in the current scope
   --> crates/ty_test/src/lib.rs:558:41
    |
558 |     let filter = std::env::var(EnvVars::MDTEST_TEST_FILTER).ok();
    |                                         ^^^^^^^^^^^^^^^^^^ associated item not found in `EnvVars`

error[E0599]: no associated item named `MDTEST_TEST_FILTER` found for struct `EnvVars` in the current scope
   --> crates/ty_test/src/lib.rs:649:26
    |
649 |                 EnvVars::MDTEST_TEST_FILTER,
    |                          ^^^^^^^^^^^^^^^^^^ associated item not found in `EnvVars`

error[E0599]: no associated item named `MDTEST_TEST_FILTER` found for struct `EnvVars` in the current scope
   --> crates/ty_test/src/lib.rs:655:26
    |
655 |                 EnvVars::MDTEST_TEST_FILTER,
    |                          ^^^^^^^^^^^^^^^^^^ associated item not found in `EnvVars`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `ty_test` (lib) due to 3 previous errors
warning: build failed, waiting for other jobs to finish...
